update index.html to match README.md
Former-commit-id: b9298f8fceb144e7e33ed2cf87bbbacf6a4aa57c

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <figure>
 <img src="libigl-teaser.png" alt="" />
-<figcaption></figcaption></figure>
+</figure>
 
 <p><a href="https://github.com/libigl/libigl/">https://github.com/libigl/libigl/</a></p>
 
@@ -163,7 +163,7 @@ Takayama, Leo Sacht, Wenzel Jacob, Nico Pietroni, Amir Vaxman</p>
 
 <figure>
 <img src="tutorial/images/libigl-logo.jpg" alt="" />
-<figcaption></figcaption></figure>
+</figure>
 
 </body>
 </html>
