Various trivial changes to make tutorial compile! -- couple of missing packages -- '(' and ')' in script to prevent Ctrl-C to change dir -- 'make clean' worked better for me in a couple of places -- $CWD sanity check in script -- small change to tutorial re same

--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -191,11 +191,13 @@ Eigen.</p>
 <p>The examples in this tutorial depend on <a href="http://www.glfw.org">glfw</a>,
 <a href="http://glew.sourceforge.net">glew</a> and <a href="http://anttweakbar.sourceforge.net/doc/">AntTweakBar</a>.
 The source code of each library is bundled with libigl
-and they can be compiled all at once using:</p>
+and they can be compiled all at once from within the tutorial folder using:</p>
 
 <pre><code class="bash">sh compile_dependencies_macosx.sh (MACOSX)
 sh compile_dependencies_linux.sh (LINUX)
 </code></pre>
+
+Please look at these scripts before executing them; additional dependencies may require manual intervention.
 
 <p>For windows, precompiled binaries are provided (Visual Studio 2014 64bit).</p>
 
