--- a/file-formats/index.html
+++ b/file-formats/index.html
@@ -26,7 +26,7 @@
     href=http://tetgen.berlios.de/fformats.node.html>TetGen</a>, and <a
     href=http://www.cs.berkeley.edu/~jrs/stellar/#fileformats>Stellar</a>.
     </li>
-    <li><a href="http://tetgen.berlios.de/fformats.off.html">.off</a> Geomview's polyhedral file format</li>
+    <li><a href="http://wias-berlin.de/software/tetgen/fformats.off.html">.off</a> Geomview's polyhedral file format</li>
     <li><a
     href="http://en.wikipedia.org/wiki/Wavefront_.obj_file#File_format">.obj</a>
     Wavefront object file format. Usually unsafe to assume anything more than
