--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@ BibTeX entry:</p>
 
 <h2 id="projectsuniversitiesusinglibigl">Projects/Universities using libigl</h2>
 
+<p>Libigl is used by many research groups around the world. In 2015, it won the
+Eurographics/ACM Symposium on Geometry Processing software award. Here are a
+few labs/companies/institutions using libigl:</p>
+
 <ul>
 <li><a href="http://esotericsoftware.com/">Spine by Esoteric Software</a> is an animation tool dedicated to 2D characters.</li>
 <li>Columbia University, <a href="http://www.cs.columbia.edu/cg/">Columbia Computer Graphics Group</a>, USA</li>
