update index.html to match README.md

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 
 <p><a href="https://github.com/libigl/libigl/">https://github.com/libigl/libigl/</a></p>
 
+<blockquote>
+<p>Get started with:</p>
+
+<pre><code class="bash">git clone https://github.com/libigl/libigl.git
+cd libigl
+git submodule update --init --recursive
+</code></pre>
+</blockquote>
+
 <p>libigl is a simple C++ geometry processing library. We have a wide
 functionality including construction of sparse discrete differential geometry
 operators and finite-elements matrices such as the cotangent Laplacian and
